--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="pl">
   <head>
     <meta charset="utf-8">
     <title>Page title</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Zadanie 9.4</h1>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <h1>Task 9.4</h1>
+    <script type="text/javascript" src="javascript/scripts.js"></script>
   </body>
 </html> 
-
